syntax = "proto3";

package user_service;

option go_package = "/internal/grpc/pb";

// import "google/protobuf/timestamp.proto";

service UserService {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc LogIn (LogInRequest) returns (LogInResponse);
    rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse); //auth
    rpc GetUser (GetUserRequest) returns (GetUserResponse); //auth
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse); //auth
    rpc UpdateDistanceTravelled (UpdateDistanceTravelledRequest) returns (UpdateDistanceTravelledResponse); //auth
    rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse);
}

message User {
    uint64 id = 1;
    string name = 2;
    string phone_number = 3;
    string email = 4;
    string password = 5;
    double distance_travelled = 6;
}

message SignUpRequest {
    string name = 1;
    string phone_number = 2;
    string email = 3;
    string password = 4;
}
  
message SignUpResponse {
    string message = 1;
}
  
message LogInRequest {
    string phone_number = 1;
    string password = 2;
}
  
message LogInResponse {
    string token = 1;
}
message ForgotPasswordRequest {
    string email = 1;
    string new_password = 2;
}
 
message ForgotPasswordResponse {
    string message = 1;
}

message UpdateUserRequest {
    uint64 id = 1;
    string name = 2;
    string phone_number = 3;
    string email = 4;
}
  
message UpdateUserResponse {
    string message = 1;
}

message GetUserRequest {
    uint64 id = 1;
}
  
message GetUserResponse {
    uint64 id = 1;
    string name = 2;
    string phone_number = 3;
    string email = 4;
    double distance_travelled = 5;
}

message ChangePasswordRequest {
    uint64 id = 1;
    string old_password = 2;
    string new_password = 3;
}
 
message ChangePasswordResponse {
    string message = 1;
}

message UpdateDistanceTravelledRequest {
    uint64 id = 1;
    double distance = 2;
}

message UpdateDistanceTravelledResponse {
    string message = 1;
}

message AuthenticateUserRequest {
    string token = 1;
}
  
message AuthenticateUserResponse {
    bool valid = 1;
    string message = 2;
    uint64 user_id = 3;
}